compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__conditional_snapshots@if_empty.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "if true { }"
---
[
    Statement {
        id: StatementId {
            def: ItemId {
                package: PackageId(
                    0,
                ),
                index: Idx(
                    0,
                ),
            },
            index: Idx(
                0,
            ),
        },
        kind: Expression(
            Expression {
                id: ExpressionId {
                    def: ItemId {
                        package: PackageId(
                            0,
                        ),
                        index: Idx(
                            0,
                        ),
                    },
                    index: Idx(
                        1,
                    ),
                },
                kind: If(
                    If {
                        id: ExpressionId {
                            def: ItemId {
                                package: PackageId(
                                    0,
                                ),
                                index: Idx(
                                    0,
                                ),
                            },
                            index: Idx(
                                1,
                            ),
                        },
                        cases: [
                            Condition {
                                condition: Some(
                                    Expression {
                                        id: ExpressionId {
                                            def: ItemId {
                                                package: PackageId(
                                                    0,
                                                ),
                                                index: Idx(
                                                    0,
                                                ),
                                            },
                                            index: Idx(
                                                2,
                                            ),
                                        },
                                        kind: Literal(
                                            Literal {
                                                id: ExpressionId {
                                                    def: ItemId {
                                                        package: PackageId(
                                                            0,
                                                        ),
                                                        index: Idx(
                                                            0,
                                                        ),
                                                    },
                                                    index: Idx(
                                                        2,
                                                    ),
                                                },
                                                kind: Boolean(
                                                    BooleanLiteral {
                                                        id: ExpressionId {
                                                            def: ItemId {
                                                                package: PackageId(
                                                                    0,
                                                                ),
                                                                index: Idx(
                                                                    0,
                                                                ),
                                                            },
                                                            index: Idx(
                                                                2,
                                                            ),
                                                        },
                                                        value: true,
                                                    },
                                                ),
                                                location: <internal>:3:7,
                                            },
                                        ),
                                        location: <internal>:3:7,
                                    },
                                ),
                                block: Block {
                                    statements: [],
                                    location: <internal>:8:11,
                                },
                                location: <internal>:3:11,
                            },
                        ],
                        location: <internal>:0:11,
                    },
                ),
                location: <internal>:0:11,
            },
        ),
        location: <internal>:0:11,
    },
]
