compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__conditional_snapshots@if_statement-2.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "if true { let a = 0; }"
---
[
    Statement {
        id: StatementId {
            def: ItemId {
                package: PackageId(
                    0,
                ),
                index: Idx(
                    0,
                ),
            },
            index: Idx(
                0,
            ),
        },
        kind: Expression(
            Expression {
                id: ExpressionId {
                    def: ItemId {
                        package: PackageId(
                            0,
                        ),
                        index: Idx(
                            0,
                        ),
                    },
                    index: Idx(
                        1,
                    ),
                },
                kind: If(
                    If {
                        id: ExpressionId {
                            def: ItemId {
                                package: PackageId(
                                    0,
                                ),
                                index: Idx(
                                    0,
                                ),
                            },
                            index: Idx(
                                1,
                            ),
                        },
                        cases: [
                            Condition {
                                condition: Some(
                                    Expression {
                                        id: ExpressionId {
                                            def: ItemId {
                                                package: PackageId(
                                                    0,
                                                ),
                                                index: Idx(
                                                    0,
                                                ),
                                            },
                                            index: Idx(
                                                2,
                                            ),
                                        },
                                        kind: Literal(
                                            Literal {
                                                id: ExpressionId {
                                                    def: ItemId {
                                                        package: PackageId(
                                                            0,
                                                        ),
                                                        index: Idx(
                                                            0,
                                                        ),
                                                    },
                                                    index: Idx(
                                                        2,
                                                    ),
                                                },
                                                kind: Boolean(
                                                    BooleanLiteral {
                                                        id: ExpressionId {
                                                            def: ItemId {
                                                                package: PackageId(
                                                                    0,
                                                                ),
                                                                index: Idx(
                                                                    0,
                                                                ),
                                                            },
                                                            index: Idx(
                                                                2,
                                                            ),
                                                        },
                                                        value: true,
                                                    },
                                                ),
                                                location: <internal>:3:7,
                                            },
                                        ),
                                        location: <internal>:3:7,
                                    },
                                ),
                                block: Block {
                                    statements: [
                                        Statement {
                                            id: StatementId {
                                                def: ItemId {
                                                    package: PackageId(
                                                        0,
                                                    ),
                                                    index: Idx(
                                                        0,
                                                    ),
                                                },
                                                index: Idx(
                                                    3,
                                                ),
                                            },
                                            kind: Variable(
                                                VariableDeclaration {
                                                    id: StatementId {
                                                        def: ItemId {
                                                            package: PackageId(
                                                                0,
                                                            ),
                                                            index: Idx(
                                                                0,
                                                            ),
                                                        },
                                                        index: Idx(
                                                            3,
                                                        ),
                                                    },
                                                    name: Identifier {
                                                        name: "a",
                                                        location: <internal>:14:15,
                                                    },
                                                    declared_type: None,
                                                    value: Expression {
                                                        id: ExpressionId {
                                                            def: ItemId {
                                                                package: PackageId(
                                                                    0,
                                                                ),
                                                                index: Idx(
                                                                    0,
                                                                ),
                                                            },
                                                            index: Idx(
                                                                4,
                                                            ),
                                                        },
                                                        kind: Literal(
                                                            Literal {
                                                                id: ExpressionId {
                                                                    def: ItemId {
                                                                        package: PackageId(
                                                                            0,
                                                                        ),
                                                                        index: Idx(
                                                                            0,
                                                                        ),
                                                                    },
                                                                    index: Idx(
                                                                        4,
                                                                    ),
                                                                },
                                                                kind: Int(
                                                                    IntLiteral {
                                                                        id: ExpressionId {
                                                                            def: ItemId {
                                                                                package: PackageId(
                                                                                    0,
                                                                                ),
                                                                                index: Idx(
                                                                                    0,
                                                                                ),
                                                                            },
                                                                            index: Idx(
                                                                                4,
                                                                            ),
                                                                        },
                                                                        value: 0,
                                                                        kind: I32,
                                                                    },
                                                                ),
                                                                location: <internal>:18:19,
                                                            },
                                                        ),
                                                        location: <internal>:18:19,
                                                    },
                                                    location: <internal>:10:20,
                                                },
                                            ),
                                            location: <internal>:10:20,
                                        },
                                    ],
                                    location: <internal>:8:22,
                                },
                                location: <internal>:3:22,
                            },
                        ],
                        location: <internal>:0:22,
                    },
                ),
                location: <internal>:0:22,
            },
        ),
        location: <internal>:0:22,
    },
]
