compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__conditional_snapshots@if_statements.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "if true { let a = 0; let b = 0; }"
---
[
    Statement {
        id: StatementId {
            def: ItemId(
                0,
            ),
            index: Idx(
                0,
            ),
        },
        kind: If(
            If {
                id: StatementId {
                    def: ItemId(
                        0,
                    ),
                    index: Idx(
                        0,
                    ),
                },
                cases: [
                    Condition {
                        condition: Some(
                            Expression {
                                id: ExpressionId {
                                    def: ItemId(
                                        0,
                                    ),
                                    index: Idx(
                                        1,
                                    ),
                                },
                                kind: Literal(
                                    Literal {
                                        id: ExpressionId {
                                            def: ItemId(
                                                0,
                                            ),
                                            index: Idx(
                                                1,
                                            ),
                                        },
                                        kind: Boolean(
                                            BooleanLiteral {
                                                id: ExpressionId {
                                                    def: ItemId(
                                                        0,
                                                    ),
                                                    index: Idx(
                                                        1,
                                                    ),
                                                },
                                                value: true,
                                            },
                                        ),
                                        location: <internal>:3:7,
                                    },
                                ),
                                location: <internal>:3:7,
                            },
                        ),
                        block: Block {
                            statements: [
                                Statement {
                                    id: StatementId {
                                        def: ItemId(
                                            0,
                                        ),
                                        index: Idx(
                                            2,
                                        ),
                                    },
                                    kind: Variable(
                                        VariableDeclaration {
                                            id: StatementId {
                                                def: ItemId(
                                                    0,
                                                ),
                                                index: Idx(
                                                    2,
                                                ),
                                            },
                                            name: Identifier {
                                                name: "a",
                                                location: <internal>:14:15,
                                            },
                                            declared_type: None,
                                            value: Expression {
                                                id: ExpressionId {
                                                    def: ItemId(
                                                        0,
                                                    ),
                                                    index: Idx(
                                                        3,
                                                    ),
                                                },
                                                kind: Literal(
                                                    Literal {
                                                        id: ExpressionId {
                                                            def: ItemId(
                                                                0,
                                                            ),
                                                            index: Idx(
                                                                3,
                                                            ),
                                                        },
                                                        kind: Int(
                                                            IntLiteral {
                                                                id: ExpressionId {
                                                                    def: ItemId(
                                                                        0,
                                                                    ),
                                                                    index: Idx(
                                                                        3,
                                                                    ),
                                                                },
                                                                value: 0,
                                                                kind: I32,
                                                            },
                                                        ),
                                                        location: <internal>:18:19,
                                                    },
                                                ),
                                                location: <internal>:18:19,
                                            },
                                            location: <internal>:10:20,
                                        },
                                    ),
                                    location: <internal>:10:20,
                                },
                                Statement {
                                    id: StatementId {
                                        def: ItemId(
                                            0,
                                        ),
                                        index: Idx(
                                            4,
                                        ),
                                    },
                                    kind: Variable(
                                        VariableDeclaration {
                                            id: StatementId {
                                                def: ItemId(
                                                    0,
                                                ),
                                                index: Idx(
                                                    4,
                                                ),
                                            },
                                            name: Identifier {
                                                name: "b",
                                                location: <internal>:25:26,
                                            },
                                            declared_type: None,
                                            value: Expression {
                                                id: ExpressionId {
                                                    def: ItemId(
                                                        0,
                                                    ),
                                                    index: Idx(
                                                        5,
                                                    ),
                                                },
                                                kind: Literal(
                                                    Literal {
                                                        id: ExpressionId {
                                                            def: ItemId(
                                                                0,
                                                            ),
                                                            index: Idx(
                                                                5,
                                                            ),
                                                        },
                                                        kind: Int(
                                                            IntLiteral {
                                                                id: ExpressionId {
                                                                    def: ItemId(
                                                                        0,
                                                                    ),
                                                                    index: Idx(
                                                                        5,
                                                                    ),
                                                                },
                                                                value: 0,
                                                                kind: I32,
                                                            },
                                                        ),
                                                        location: <internal>:29:30,
                                                    },
                                                ),
                                                location: <internal>:29:30,
                                            },
                                            location: <internal>:21:31,
                                        },
                                    ),
                                    location: <internal>:21:31,
                                },
                            ],
                            location: <internal>:8:33,
                        },
                        location: <internal>:3:33,
                    },
                ],
                location: <internal>:0:33,
            },
        ),
        location: <internal>:0:33,
    },
]
